examples/test/testpolicy6221.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6221
  namespace: namespace478
spec:
  podSelector:
    matchLabels:
      key19: value36
      key3: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value38
          key39: value29
      podSelector:
        matchLabels:
          key2: value25
          key33: value23
